--- a/src/pug/about.pug
+++ b/src/pug/about.pug
@@ -22,6 +22,7 @@ html
                                     img.preload.pop-btn(src="./images/env-s.jpg", loading="lazy" rel="preload", data-popsrc="./images/env-l.jpg")
                                     div.title 標題說明
                                     p.txt 文章說明
+            +toolBox()
             include ./comps/footer.pug 
             include ./comps/pop.pug 
 
