--- a/src/pug/column.pug
+++ b/src/pug/column.pug
@@ -11,5 +11,6 @@ html
                 +sub-banner('./images/banner-column.jpg','文章專欄')
                 div.block
                     +column(6)
+            +toolBox()
             include ./comps/footer.pug 
                     
