--- a/src/pug/comps/footer.pug
+++ b/src/pug/comps/footer.pug
@@ -1,7 +1,7 @@
 div.footer-container
     div.box.b1
         img(src="./images/footer-logo.svg")
-        p 立案號碼 桃市衛心字第 XY01110033號
+        p 立案號碼 桃市衛心字第 號
     div.box.b2
         div.title 聯絡資訊
         ul
