--- a/src/pug/contactus.pug
+++ b/src/pug/contactus.pug
@@ -12,5 +12,6 @@ html
                 div.block
                     +contactus()
 
+            +toolBox()
             include ./comps/footer.pug 
                     
