--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -41,6 +41,6 @@ html
                 div.block
                     +title('聯絡我們', 'CONTACT US')
                     +contactus()
-
+            +toolBox()
             include ./comps/footer.pug 
                     
