--- a/src/pug/service.pug
+++ b/src/pug/service.pug
@@ -55,4 +55,5 @@ html
                     +process()
                     div.bFooter
                         a.btn(href="https://docs.google.com/forms/d/e/1FAIpQLScNvhS2yqTzdB26SHk0XkajzoAW7-2yfTvVOBCZEEQ9wr2Z7A/viewform")  線上預約             
+            +toolBox()
             include ./comps/footer.pug 
