--- a/src/pug/team.pug
+++ b/src/pug/team.pug
@@ -11,4 +11,5 @@ html
                 +sub-banner('./images/banner-team.jpg','心設計的專業團隊')
                 div.block.p100               
                     +team()
+            +toolBox()
             include ./comps/footer.pug 
