--- a/src/sass/comps/nav.sass
+++ b/src/sass/comps/nav.sass
@@ -212,5 +212,5 @@
     &:has(> .nav-container.fix)
         margin-top: $fixNavHeight
         @include lg
-            margin-top: 0 
+            margin-top: 70px 
         
