--- a/src/sass/pages/contactus.sass
+++ b/src/sass/pages/contactus.sass
@@ -47,6 +47,10 @@
                 .row
                     display: flex
                     margin-bottom: 16px
+                    .high
+                        color:#d2076f
+                    a
+                        color:#d2076f
                     .label
                         flex:0 0 220px
                         @include xxxl
