--- a/src/sass/comps/pop.sass
+++ b/src/sass/comps/pop.sass
@@ -31,10 +31,13 @@
     #popClose
         width: 50px
         height: 50px
+        @include md
+            width: 30px
+            height: 30px
         margin-bottom: 20px
 
     .frame
-        width: 100%
+        width: calc(100% - 20px)
         max-width: 1200px
         padding: 10px
         background-color: #fff
