--- a/src/sass/pages/about.sass
+++ b/src/sass/pages/about.sass
@@ -6,10 +6,14 @@
             font-size: 21px
 
         .intro
-            width: 100%
+            padding: 60px
+            width: calc(100% - 120px)
             max-width: 1200px
             font-weight: 400
-            padding: 60px
+            @include md
+                padding: 40px 20px
+                width: calc(100% - 40px)
+
 
     .envContainer
         width: calc(100% - 72px)
