--- a/src/sass/pages/team.sass
+++ b/src/sass/pages/team.sass
@@ -135,17 +135,33 @@
                         padding: 0
                     .name
                         font-size: 60px
+                        @include lg
+                            font-size: 56px
+                        @include sm
+                            font-size: 42px
                     .title
                         font-size: 45px
+                        @include lg
+                            font-size: 38px
+                        @include sm
+                            font-size: 26px
 
                     .sn
                         color: $mainColor
                         font-size: 40px
+                        @include lg
+                            font-size: 32px
+                        @include sm
+                            font-size: 24px
             .row
                 color: #42495B
                 border-bottom: 1px solid #42495B
                 display: flex
                 font-size: 24px
+                @include lg
+                    font-size: 24px
+                @include sm
+                    font-size: 21px
                 padding: 40px 60px
                 width: calc(100% - 120px)
                 max-width: 1200px                
@@ -160,14 +176,26 @@
                 ul,li,p
                     margin: 0
                     padding: 0
-                    list-style: none
+                    //list-style: none
+                ul.t1
+                    margin-left:20px
+                    list-style-type: disc 
+                ul.t2
+                    margin-left:20px 
+                    list-style-type: '※ ' 
                 li
                     padding-bottom:20px 
                 .label
+                    font-size: 40px
                     flex: 0 0 250px
                     @include lg
                         flex: 0 0 80px
-                    font-size: 40px
+                        font-size: 32px
+                    @include md
+                        flex: 0 0 60px
+                    @include sm
+                        flex: 0 0 40px
+                        font-size: 24px
                     color: $mainColor
                 .content
                     padding-top: 6px
